Create job by group